[package]
name = "teleport-tg"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre = "0.6.12"
reqwest = { version = "0.11.10" }
reqwest-oauth1 = "0.2.4"
log = "0.4.21"
env_logger = "0.11.3"
serde = "1.0.203"
serde_json = "1.0.117"
dotenv = "0.15.0"
teloxide = { version = "0.12", features = ["macros"] }
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
serde_urlencoded = "0.7.1"
serde_qs = "0.13.0"
url = "2.5.2"
axum = "0.7.5"
serde_with = "3.8.1"
